pkg/lang/testdata/ub/stack-values/invalid/input-expression-reference.ub
factory: {
  inputs: { x: input.other }
}
